feat(proxmox): UI and app and image caching