@@ -15,8 +15,13 @@ import com.netflix.spinnaker.clouddriver.cache.OnDemandAgent;
 import com.netflix.spinnaker.clouddriver.cache.OnDemandMetricsSupport;
 import com.netflix.spinnaker.clouddriver.cache.OnDemandType;
 import com.netflix.spinnaker.clouddriver.proxmox.ProxmoxProvider;
+import com.netflix.spinnaker.clouddriver.proxmox.caching.ProxmoxCacheKeys;
+import com.netflix.spinnaker.clouddriver.proxmox.caching.ProxmoxResourceType;
 import com.netflix.spinnaker.clouddriver.proxmox.model.ProxmoxNode;
+import com.netflix.spinnaker.clouddriver.proxmox.names.ProxmoxResource;
+import com.netflix.spinnaker.clouddriver.proxmox.names.ProxmoxTagNamer;
 import com.netflix.spinnaker.clouddriver.proxmox.security.ProxmoxNamedAccountCredentials;
+import com.netflix.spinnaker.moniker.Moniker;
 import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -31,12 +36,14 @@ public abstract class AbstractProxmoxCachingAgent
       String.join(":", ProxmoxProvider.ID, OnDemandType.ServerGroup.getValue());
   protected final Logger log = LoggerFactory.getLogger(getClass());
   protected final ProxmoxNamedAccountCredentials credentials;
+  protected final ProxmoxTagNamer tagNamer;
   private final OnDemandMetricsSupport metricsSupport;
 
   public AbstractProxmoxCachingAgent(
-      ProxmoxNamedAccountCredentials credentials, Registry registry) {
+      ProxmoxNamedAccountCredentials credentials, Registry registry, ProxmoxTagNamer tagNamer) {
     Assert.notNull(credentials, "credentials cannot be null");
     this.credentials = credentials;
+    this.tagNamer = tagNamer;
     this.metricsSupport = new OnDemandMetricsSupport(registry, this, ON_DEMAND_TYPE);
   }
 
@@ -71,16 +78,97 @@ public abstract class AbstractProxmoxCachingAgent
                 () ->
                     new IllegalStateException(
                         "No authoritative data type declared for " + getAgentType()));
+
+    Map<String, CacheData> appEntries = new LinkedHashMap<>();
+    Map<String, List<String>> appToResourceKeys = new LinkedHashMap<>();
+    Map<String, List<String>> clusterToResourceKeys = new LinkedHashMap<>();
+    Map<String, Map<String, Object>> clusterAttrMap = new LinkedHashMap<>();
+    Map<String, String> clusterToAppKey = new LinkedHashMap<>();
+    Map<String, String> resourceToClusterKey = new LinkedHashMap<>();
+
     Collection<CacheData> cacheData =
         items.entrySet().stream()
             .map(
                 item -> {
                   Map<String, Object> attributes =
                       objectMapper.convertValue(item.getValue(), new TypeReference<>() {});
-                  return new DefaultCacheData(item.getKey(), attributes, Collections.emptyMap());
+                  Map<String, Collection<String>> relationships = new HashMap<>();
+                  if (tagNamer != null && item.getValue() instanceof ProxmoxResource resource) {
+                    Moniker moniker = tagNamer.deriveMoniker(resource);
+                    String app = moniker.getApp();
+                    if (app != null) {
+                      attributes.put("spinnakerApp", app);
+                      String appKey = ProxmoxCacheKeys.application(app);
+                      appEntries.putIfAbsent(
+                          appKey,
+                          new DefaultCacheData(appKey, Map.of("name", app), new HashMap<>()));
+                      appToResourceKeys
+                          .computeIfAbsent(appKey, k -> new ArrayList<>())
+                          .add(item.getKey());
+                      relationships.put(ProxmoxResourceType.APPLICATION.name(), List.of(appKey));
+
+                      String account = ProxmoxCacheKeys.getAccount(item.getKey());
+                      if (account != null) {
+                        String clusterName =
+                            moniker.getCluster() != null ? moniker.getCluster() : app;
+                        String clusterKey = ProxmoxCacheKeys.cluster(account, clusterName);
+                        clusterToResourceKeys
+                            .computeIfAbsent(clusterKey, k -> new ArrayList<>())
+                            .add(item.getKey());
+                        clusterAttrMap.putIfAbsent(
+                            clusterKey,
+                            new HashMap<>(
+                                Map.of("name", clusterName, "accountName", account, "app", app)));
+                        clusterToAppKey.putIfAbsent(clusterKey, appKey);
+                        resourceToClusterKey.put(item.getKey(), clusterKey);
+                        relationships.put(ProxmoxResourceType.CLUSTER.name(), List.of(clusterKey));
+                      }
+                    }
+                  }
+                  return new DefaultCacheData(item.getKey(), attributes, relationships);
                 })
             .collect(Collectors.toUnmodifiableList());
-    return new DefaultCacheResult(Map.of(dataType, cacheData));
+
+    appToResourceKeys.forEach(
+        (appKey, resourceKeys) -> {
+          CacheData appEntry = appEntries.get(appKey);
+          if (appEntry != null) {
+            appEntry.getRelationships().put(dataType, resourceKeys);
+            List<String> clusterKeys =
+                resourceKeys.stream()
+                    .map(resourceToClusterKey::get)
+                    .filter(Objects::nonNull)
+                    .distinct()
+                    .collect(Collectors.toList());
+            if (!clusterKeys.isEmpty()) {
+              appEntry.getRelationships().put(ProxmoxResourceType.CLUSTER.name(), clusterKeys);
+            }
+          }
+        });
+
+    Map<String, CacheData> clusterEntries = new LinkedHashMap<>();
+    clusterAttrMap.forEach(
+        (clusterKey, attrs) -> {
+          List<String> resourceKeys = clusterToResourceKeys.getOrDefault(clusterKey, List.of());
+          Map<String, Collection<String>> clusterRels = new HashMap<>();
+          String appKey = clusterToAppKey.get(clusterKey);
+          if (appKey != null) {
+            clusterRels.put(ProxmoxResourceType.APPLICATION.name(), List.of(appKey));
+          }
+          clusterRels.put(dataType, resourceKeys);
+          clusterEntries.put(
+              clusterKey, new DefaultCacheData(clusterKey, new HashMap<>(attrs), clusterRels));
+        });
+
+    Map<String, Collection<CacheData>> result = new HashMap<>();
+    result.put(dataType, cacheData);
+    if (!appEntries.isEmpty()) {
+      result.put(ProxmoxResourceType.APPLICATION.name(), appEntries.values());
+    }
+    if (!clusterEntries.isEmpty()) {
+      result.put(ProxmoxResourceType.CLUSTER.name(), clusterEntries.values());
+    }
+    return new DefaultCacheResult(result);
   }
 
   @Override
